# news_posts

./: .env.exemplo  README.md  pyproject.toml
src/news/: buscar_noticias.py  criar_elementos.py  main.py
